(Gsasl_property): Remove unused properties, for now.

--- a/lib/src/gsasl.h.in
+++ b/lib/src/gsasl.h.in
@@ -120,31 +120,23 @@ extern "C"
   /* Callback/property types. */
   typedef enum
   {
+    /* Information properties, e.g., username. */
     GSASL_AUTHID = 1,
     GSASL_AUTHZID = 2,
     GSASL_PASSWORD = 3,
-    GSASL_PASSCODE = 4,
-    GSASL_SUGGESTED_PIN = 5,
-    GSASL_PIN = 6,
-    GSASL_ANONYMOUS_TOKEN = 7,
-    GSASL_SERVICE = 8,
-    GSASL_HOSTNAME = 9,
-    GSASL_CLIENT_QOP = 10,
-    GSASL_CLIENT_MAXBUF = 11,
-    GSASL_SERVER_VALIDATE = 12,
-    GSASL_SERVER_RETRIEVE = 13,
-    GSASL_SERVER_USEROK = 14,
-    GSASL_SERVER_CRAM_MD5 = 15,
-    GSASL_SERVER_DIGEST_MD5 = 16,
-    GSASL_VALIDATE_SECURID = 17,
-    GSASL_VALIDATE_ANONYMOUS = 18,
-    GSASL_VALIDATE_EXTERNAL = 19,
-    GSASL_VALIDATE_GSSAPI = 20,
-    GSASL_SERVER_REALM = 21,
-    GSASL_SERVER_QOP = 22,
-    GSASL_SERVER_MAXBUF = 23,
-    GSASL_SERVER_CIPHER = 24,
-    GSASL_GSSAPI_DISPLAY_NAME = 25
+    GSASL_ANONYMOUS_TOKEN = 4,
+    GSASL_SERVICE = 5,
+    GSASL_HOSTNAME = 6,
+    GSASL_GSSAPI_DISPLAY_NAME = 7,
+    GSASL_PASSCODE = 8,
+    GSASL_SUGGESTED_PIN = 9,
+    GSASL_PIN = 10,
+    /* Server validation callback properties. */
+    GSASL_VALIDATE_SIMPLE = 500,
+    GSASL_VALIDATE_ANONYMOUS = 501,
+    GSASL_VALIDATE_EXTERNAL = 502,
+    GSASL_VALIDATE_GSSAPI = 503,
+    GSASL_VALIDATE_SECURID = 504
   } Gsasl_property;
 
   /**
