Dist cram-md5.pwd.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -18,7 +18,7 @@
 # the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
 # Boston, MA 02111-1307, USA.
 
-noinst_DATA = cram-md5.pwd
+dist_noinst_DATA = cram-md5.pwd
 
 AM_CPPFLAGS = -I$(top_builddir)/lib/src -I$(srcdir)/../gl -I../gl
 AM_LDFLAGS = -no-install
