Add CPP definition GSASL_NO_OBSOLETE to hide obsolete code (md5pwd.c still todo).

--- a/lib/src/gsasl.h.in
+++ b/lib/src/gsasl.h.in
@@ -242,8 +242,10 @@ extern "C"
   /* Get the mechanism API. */
 # include <gsasl-mech.h>
 
+#ifndef GSASL_NO_OBSOLETE
   /* For compatibility with earlier versions. */
 # include <gsasl-compat.h>
+#endif
 
 # ifdef __cplusplus
 }
