Add copy of libidn, so we always have SASLprep functionality.

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -25,6 +25,10 @@ pkgconfig_DATA = libgsasl.pc
 
 SUBDIRS = po gl crypto
 
+if MINILIBIDN
+SUBDIRS += libidn
+endif
+
 # Plugins:
 if EXTERNAL
 SUBDIRS += external
