--- a/lib/src/Makefile.am
+++ b/lib/src/Makefile.am
@@ -22,6 +22,9 @@ lib_LTLIBRARIES = libgsasl.la
 
 AM_CPPFLAGS = -I$(srcdir)/../gl -I../gl -I$(srcdir)/.. \
 	-I$(srcdir)/../crypto -I../crypto
+if MINILIBIDN
+AM_CPPFLAGS += -I$(srcdir)/../libidn
+endif
 DEFS = -DLOCALEDIR=\"$(datadir)/locale\" @DEFS@
 
 include_HEADERS = gsasl.h gsasl-mech.h gsasl-compat.h
@@ -29,18 +32,16 @@ include_HEADERS = gsasl.h gsasl-mech.h gsasl-compat.h
 libgsasl_la_LDFLAGS = -version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE) \
 	-export-symbols-regex '^(gsasl|GSASL).*'
 libgsasl_la_LIBADD = @LTLIBINTL@ ../gl/libgl.la ../crypto/libgc.la
+if MINILIBIDN
+libgsasl_la_LIBADD += ../libidn/libminilibidn.la
+endif
 libgsasl_la_SOURCES = gsasl.h.in internal.h \
 	init.c done.c register.c error.c version.c \
 	callback.c property.c \
 	supportp.c suggest.c listmech.c \
 	xstart.c xstep.c xfinish.c xcode.c \
-	base64.c md5pwd.c crypto.c obsolete.c
-
-if STRINGPREP
-libgsasl_la_SOURCES += stringprep.c saslprep.c
-else
-libgsasl_la_SOURCES += stringprep-no.c
-endif
+	base64.c md5pwd.c crypto.c obsolete.c \
+	stringprep.c saslprep.c
 
 # Plugins:
 if EXTERNAL
