Libidn need ICONV_CONST.

--- a/lib/configure.ac
+++ b/lib/configure.ac
@@ -363,6 +363,7 @@ AC_ARG_WITH(included-libidn,
 if test "$minilibidn_enabled" = "no"; then
 	sj_CHECK_HEADERLIB(stringprep.h, idn, stringprep_check_version,,
 		minilibidn_enabled=yes
+		AM_ICONV
 		AC_MSG_WARN([[Libidn not found.  Using the included copy.]]))
 fi
 AC_MSG_CHECKING([whether to use the included libidn])
