Add realm property.

--- a/lib/src/gsasl.h.in
+++ b/lib/src/gsasl.h.in
@@ -143,6 +143,7 @@ extern "C"
     GSASL_PASSCODE = 8,
     GSASL_SUGGESTED_PIN = 9,
     GSASL_PIN = 10,
+    GSASL_REALM = 11,
     /* Server validation callback properties. */
     GSASL_VALIDATE_SIMPLE = 500,
     GSASL_VALIDATE_EXTERNAL = 501,
