--- a/gl/Makefile.am
+++ b/gl/Makefile.am
@@ -80,7 +80,7 @@ libgl_la_SOURCES += gettext.h
 ## begin gnulib module iconvme
 
 libgl_la_SOURCES += iconvme.h iconvme.c
-lib_LIBADD += $(LTLIBICONV)
+libgl_la_LIBADD += $(LTLIBICONV)
 
 ## end   gnulib module iconvme
 
