--- a/lib/configure.ac
+++ b/lib/configure.ac
@@ -355,18 +355,19 @@ AC_MSG_CHECKING([if KERBEROS_V5 should be used])
 AC_MSG_RESULT($kerberos_v5)
 AM_CONDITIONAL(KERBEROS_V5, test x$kerberos_v5 = xyes)
 
-# Check for idn
-AC_ARG_WITH(stringprep,
-  AS_HELP_STRING([--without-stringprep],
-		[don't use libidn for string processing even if available]),
+# Check for libidn
+AC_ARG_WITH(saslprep,
+  AS_HELP_STRING([--without-saslprep], [disable non-ASCII support]),
 	stringprep=$withval, stringprep=yes)
-if test "$stringprep" != "no"; then
-	sj_CHECK_HEADERLIB(stringprep.h, idn, stringprep_check_version,
-		[stringprep=yes
-		AC_DEFINE(WITH_STRINGPREP, 1,
-			[Define to 1 if you want to use libidn.])],
-		[stringprep=no
-		AC_MSG_WARN([Libidn not found.  String process disabled.])])
+if test "$saslprep" != "no"; then
+  sj_CHECK_HEADERLIB(stringprep.h, idn, stringprep_check_version, [
+    saslprep=yes
+    AC_DEFINE(WITH_SASLPREP, 1,
+	[Define to 1 if you want to use SASLprep in Libidn.])
+  ], [
+    saslprep=no
+    AC_MSG_WARN([Libidn not found.  SASLprep disabled.])
+  ])
 fi
 
 # Allow disabling of client or server.
@@ -406,7 +407,7 @@ gl_INIT
 AX_CREATE_STDINT_H(crypto/nettle-types.h, sys/types.h)
 
 AC_CONFIG_FILES(Makefile libgsasl.pc po/Makefile.in \
-		gl/Makefile crypto/Makefile libidn/Makefile \
+		gl/Makefile crypto/Makefile \
 		src/gsasl.h src/Makefile \
 		anonymous/Makefile cram-md5/Makefile \
 		digest-md5/Makefile external/Makefile \
