Add vasprintf module, because DIGEST-MD5 need asprintf.

--- a/lib/configure.ac
+++ b/lib/configure.ac
@@ -401,7 +401,7 @@ AM_CONDITIONAL(SERVER, test x$server = xyes)
 gl_SOURCE_BASE(gl)
 gl_M4_BASE(gl/m4)
 gl_LIB(libgl)
-gl_MODULES(strdup gettext base64)
+gl_MODULES(strdup gettext base64 vasprintf)
 gl_LGPL
 gl_INIT
 
