--- a/lib/src/gsasl.h.in
+++ b/lib/src/gsasl.h.in
@@ -142,6 +142,7 @@ extern "C"
     GSASL_SUGGESTED_PIN = 9,
     GSASL_PIN = 10,
     GSASL_REALM = 11,
+    GSASL_QOP = 12,
     /* Server validation callback properties. */
     GSASL_VALIDATE_SIMPLE = 500,
     GSASL_VALIDATE_EXTERNAL = 501,
