--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -37,7 +37,7 @@ TESTS_ENVIRONMENT = SHISHI_KEYS=$(srcdir)/gssapi.key \
 	MD5FILE=$(srcdir)/cram-md5.pwd
 
 ctests = simple cram-md5 digest-md5 md5file \
-	old-cram-md5
+	old-cram-md5 old-digest-md5
 
 # old-gssapi
 
