--- a/lib/configure.ac
+++ b/lib/configure.ac
@@ -417,7 +417,7 @@ AM_CONDITIONAL(OBSOLETE, test "$obsolete" = "yes")
 gl_SOURCE_BASE(gl)
 gl_M4_BASE(gl/m4)
 gl_LIB(libgl)
-gl_MODULES(strdup gettext base64 vasprintf lgetline)
+gl_MODULES(strdup gettext base64 vasprintf lgetline check_version)
 gl_LGPL
 gl_INIT
 
