--- a/configure.ac
+++ b/configure.ac
@@ -15,9 +15,8 @@ dnl Process this file with autoconf to produce a configure script.
 # GNU General Public License for more details.
 #
 # You should have received a copy of the GNU General Public License
-# along with GNU SASL; see the file COPYING.  If not, write to
-# the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
-# Boston, MA 02111-1307, USA.
+# along with GNU SASL; if not, write to the Free Software Foundation,
+# Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
 
 AC_INIT([gsasl], [0.2.6], [bug-gsasl@gnu.org])
 
