--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -94,10 +94,7 @@ release:
 	cvs commit -m "" ChangeLog
 	gpg -b $(distdir).tar.gz
 	gpg --verify $(distdir).tar.gz.sig
-	echo "directory: gsasl" > $(distdir).tar.gz.directive
-	gpg --clearsign $(distdir).tar.gz.directive
-	ncftpput ftp-upload.gnu.org /incoming/alpha \
-		$(distdir).tar.gz{,.sig,.directive.asc}
+	gnupload --to alpha.gnu.org:gsasl $(distdir).tar.gz
 	cp -v $(distdir).tar.gz{,.sig} $(htmldir)/releases/
 	cd $(htmldir) && cvs add -kb releases/$(distdir).tar.gz{,.sig} && \
 		cvs commit -m "Update." releases/
