Fix for modern wget.

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -73,7 +73,7 @@ SUBDIRS += src
 POURL = ftp://ftp.unex.es/pub/gnu-i18n/po/maint/$(PACKAGE)
 update-po:
 	cd po && \
-	wget --non-verbose --timestamping --retr-symlinks $(POURL)/*.po && \
+	wget --no-verbose --timestamping --retr-symlinks $(POURL)/*.po && \
 	cvs add `ls *.po | grep -v quot.po` || true && \
 	ls *.po | sed 's/.po//' > LINGUAS && \
 	cvs commit -m "Sync with TP." LINGUAS `ls *.po | grep -v quot.po`
