--- a/lib/src/Makefile.am
+++ b/lib/src/Makefile.am
@@ -20,16 +20,14 @@
 
 lib_LTLIBRARIES = libgsasl.la
 
-AM_CPPFLAGS = -I$(srcdir)/../gl -I../gl -I$(srcdir)/.. \
-	-I$(srcdir)/../crypto -I../crypto
+AM_CPPFLAGS = -I$(srcdir)/../gl -I../gl -I$(srcdir)/..
 DEFS = -DLOCALEDIR=\"$(datadir)/locale\" @DEFS@
 
 include_HEADERS = gsasl.h gsasl-mech.h gsasl-compat.h
 
 libgsasl_la_LDFLAGS = -version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE) \
 	-export-symbols-regex '^(gsasl|GSASL).*'
-libgsasl_la_LIBADD = ../gl/libgl.la ../crypto/libgc.la \
-	@LTLIBINTL@ @LTLIBIDN@
+libgsasl_la_LIBADD = ../gl/libgl.la @LTLIBINTL@ @LTLIBIDN@
 libgsasl_la_SOURCES = gsasl.h.in internal.h \
 	init.c done.c register.c error.c version.c \
 	callback.c property.c \
